# trading_systems

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  CLAUDE.md  DATA_LAYER_REVIEW.md  Dockerfile  EFFICIENT_PROJECT_USE.md  MIGRATION_FIX.md  ML_PIPELINE_REVIEW.md  Makefile  ORCHESTRATOR_REVIEW.md  PHASE_9_KICKOFF_GUIDE.md  QUICK_FIX_TEMPLATES.md  README.md  SIGNAL_PIPELINE_REVIEW.md  TECHNICAL_REVIEW_MASTER_SUMMARY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  project.md  pyproject.toml  test_angelone.py  toolkits_full.json
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
audit/: __init__.py  persistence.py  query.py  schema.py
backtest/: STRATEGY_HARNESS_GUIDE.md  costs.py  metrics.py  strategy_harness.py  train_crypto.py  walk_forward.py
conductor/: alpha-engine.md
config/: instruments.json  settings.py  strategy_params.yaml
data/: bulk_ingest.py  clean.py  ingest.py  kite_auth.py  live_feed.py  options_scraper.py  rate_limiter.py  redis_keys.py  store.py  universe.py  universe_crypto.py
data/providers/: __init__.py  base.py  binance.py  kite.py  upstox.py
deploy/: setup-server.sh
deploy/grafana/provisioning/: README.md
deploy/nginx/: nginx.conf
deploy/prometheus/: prometheus.yml
docs/: ARCHITECTURE.md  env-variables.adoc  usage-guide.adoc
docs/hermes/: config.json
docs/superpowers/plans/: 2024-05-22-hermes-foundation.md  2026-05-22-hermes-dual-engine.md
docs/superpowers/specs/: 2026-05-22-hermes-dual-engine-trading-design.md
execution/: broker.py  logger.py  orders.py  paper.py
fundamentals/: COMPLETION_SUMMARY.md  README.md  __init__.py  ingest.py  providers.py  ranking.py  schema.py  scoring.py  watchlist.py
graphify-out/: GRAPH_REPORT.md
llm/: pipeline.py  sentiment.py  sources.py  sources_crypto.py
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py  0002_extended_tables.py  0003_ohlcv_composite_index.py  d8a5a1cb2f6d_timescaledb_optimization.py
monitoring/: ATTRIBUTION_GUIDE.md  ab_test_reporter.py  alerts.py  attribution.py  drift_detector.py  feature_drift_report.py  grafana_exporter.py  health.py  mlflow_tracker.py  reconciliation.py  reporters.py  telegram_bot.py  telegram_notifier.py  trade_review.py
options/: greeks.py  iv_features.py  strategy.py
orchestrator/: INTEGRATION_GUIDE.md  PHASE_8_GUIDE.md  ab_router.py  ab_tester.py  feature_engineer.py  main.py  model_registry.py  runner.py  scheduler.py
portfolio/: __init__.py  correlation.py  exposure.py  limits.py  liquidity.py  risk_manager.py  schema.py  turnover.py
risk/: breakers.py  monitor.py  sizer.py
scripts/: bootstrap.sh  go_live_check.py
signals/: alpha_composite.py  base_strategy.py  contracts.py  exit_model.py  feature_registry.yaml  feature_validator.py  features.py  filters.py  model.py  options_alpha.py  regime.py  registry.py  scanner_engine.py  sector_alpha.py  signal_router.py  train.py  vcp_scanner.py  wealth_architect_scanner.py
signals/feature_lib/: __init__.py  advanced.py  core_indicators.py  flow.py  sentiment.py  volatility.py
signals/strategies/: momentum_sentinel.py  rs_breakout.py  tight_closes.py  vcp.py
signals/training/: __init__.py  concept_drift.py  ensemble_models.py  hyperparameter_optimizer.py  walk_forward_ensemble.py
tests/: conftest.py  test_ab_testing.py  test_alpha_engine.py  test_alpha_engine_regime.py  test_attribution.py  test_backtest.py  test_backtest_harness.py  test_data_clean.py  test_data_ingest.py  test_data_options.py  test_data_store.py  test_data_universe.py  test_execution_logger.py  test_execution_orders.py  test_features_engineering.py  test_fundamentals.py  test_kite_auth.py  test_live_feed.py  test_llm_pipeline.py  test_llm_sentiment.py  test_llm_sources.py  test_llm_sources_crypto.py  test_momentum_sentinel.py  test_monitoring.py  test_monitoring_new.py  test_options.py  test_orchestrator.py  test_orchestrator_integration.py  test_orchestrator_ml_evolution.py  test_orchestrator_refactor.py  test_orchestrator_scheduler.py  test_paper.py  test_portfolio_risk.py  test_providers_binance.py  test_remaining_phases.py  test_risk_breakers.py  test_risk_monitor.py  test_risk_sizer.py  test_scanner.py  test_signal_contract.py  (+9 more)
