[project]
name = "trading-system"
version = "0.1.0"
description = "NSE algorithmic trading system — Zerodha Kite + XGBoost + FinBERT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "apscheduler>=3.10.4",
    "structlog>=24.1.0",

    # Market data
    "kiteconnect>=5.0.1",
    "finnhub-python>=2.4.19",
    "feedparser>=6.0.11",

    # Technical analysis
    "pandas-ta>=0.3.14b",

    # ML
    "lightgbm>=4.3.0",
    "xgboost>=2.0.3",
    "scikit-learn>=1.4.1",
    "hmmlearn>=0.3.2",
    "optuna>=3.6.1",
    "shap>=0.45.0",

    # NLP / LLM
    "transformers>=4.39.0",
    "torch>=2.2.1",
    "sentence-transformers>=2.5.1",

    # Database
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.28",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.3",

    # Monitoring
    "mlflow>=2.11.1",
    "prometheus-client>=0.20.0",
    "python-telegram-bot>=21.1",

    # Backtesting
    "vectorbt>=0.26.2",
]

[dependency-groups]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[project.optional-dependencies]
upstox = [
    # requests is already a transitive dep via kiteconnect; listed explicitly
    # so uv knows it's required for the upstox extra.
    # websocket-client is also already present via kiteconnect.
    # For live-streaming protobuf decoding, install the SDK from GitHub:
    #   pip install git+https://github.com/upstox/upstox-python.git
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = [
    "main.py",
    "migrations/*",
]

[tool.hatch.build.targets.wheel]
packages = ["data", "signals", "llm", "risk", "execution", "backtest", "options", "orchestrator", "monitoring"]
